# rest-framework-tutorial

./: .gitignore  pyproject.toml
snippets/: urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py  urls.py
